--- a/first.html
+++ b/first.html
@@ -8,12 +8,13 @@
     <style>
         .heading{
             color: red;
+            background-color: aqua;
         }
     </style>
     
 </head>
 <body>
     <!-- <h1 style="color: blue;">Purthvish</h1> // inline css -->
-    <h1 class="heading" style="color:aqua;">Purthvish</h1>
+    <h1 class="heading" style="color:red;">Purthvish</h1>
 </body>
 </html>
