--- a/BorderOutline.html
+++ b/BorderOutline.html
@@ -23,6 +23,14 @@
             
 
             border: 10px solid red;
+
+            outline-width: 10px;
+            outline-color: blue;
+            outline-style: dashed;
+
+
+
+            outline: 10px dotted  yellowgreen;
         }
     </style>
 </head>
