--- a/hover.html
+++ b/hover.html
@@ -22,8 +22,14 @@
         background-color: red;
     }
 
-    
+    .b1:hover{
+        height: 230px;
+        width: 200px;
+        background-color: red;
+        border-radius: 0%;
+    }
 
+    
     .box2{
         height: 230px;
         width: 200px;
@@ -31,6 +37,24 @@
         margin-left: 240px;
         margin-top: -230px;
         background-color: black;
+    }
+
+
+    .b2{
+        height: 60px;
+        width: 60px;
+        border: 2px solid rgb(43, 226, 74);
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+        border-top-right-radius: 50%;
+        background-color: rgb(36, 225, 48);
+    }
+
+    .b2:hover{
+        height: 230px;
+        width: 200px;
+        background-color: rgb(0, 255, 60);
+        border-radius: 0%;
     }
     .box3{
         height: 230px;
