--- a/hover.html
+++ b/hover.html
@@ -16,18 +16,46 @@
         height: 60px;
         width: 60px;
         border: 2px solid red;
+        background-color: red;
         border-bottom-left-radius: 50%;
         border-bottom-right-radius: 50%;
         border-top-right-radius: 50%;
-        background-color: red;
+        transition: 1s;
     }
-
     .b1:hover{
         height: 230px;
         width: 200px;
         background-color: red;
         border-radius: 0%;
+        transition: 1s;
+
     }
+
+
+
+
+
+    /* .b1{
+        height: 60px;
+        width: 60px;
+        border: 2px solid red;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+        border-top-right-radius: 50%;
+        background-color: red;
+    } */
+
+    /* .b1:hover{
+        height: 230px;
+
+    } */
+
+    /* .b1:hover{
+        height: 230px;
+        width: 200px;
+        background-color: red;
+        border-radius: 0%;
+    } */
 
     
     .box2{
@@ -84,10 +112,10 @@
 </style>
 
 <body>
-    <div class="box1">  <div class="b1"></div> </div>
-    <div class="box2">  <div class="b2"></div> </div>
-    <div class="box3">  <div class="b3"></div> </div>
-    <div class="box4">  <div class="b4"></div> </div>
-    <div class="box5">  <div class="b5"></div> </div>
+    <div class="box1"> <div class="b1"></div> </div>
+    <div class="box2">  </div>
+    <div class="box3">  </div>
+    <div class="box4">  </div>
+    <div class="box5">  </div>
 </body>
 </html>
