--- a/Float.html
+++ b/Float.html
@@ -29,12 +29,97 @@
         border: 2px solid black;
         float: left;
     }
+    .box1{
+        height: 200px;
+        width: 100%;
+        background-color: lightblue;
+    }
+    .p1{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: right;
+    }
+    .p2{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: right;
+    }
+    .p3{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: right;
+    }
+    .box2{
+        height: 200px;
+        width: 100%;
+        background-color: lightgreen;
+    }
+    .q1{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: left;
+    }
+    .q2{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: left;
+    }
+    .q3{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: left;
+    }
+    .box3{
+        height: 200px;
+        width: 100%;
+        background-color: lightpink;
+    }
+    .r1{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: right;
+    }
+    .r2{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: left;
+    }
+    .r3{
+        height: 100px;
+        width: 100px;
+        border: 2px solid black;
+        float: right;
+    }
+
 </style>
 <body>
     <div class="box">
         <div class="b1"></div>
         <div class="b2"></div>
         <div class="b3"></div>
+    </div>
+    <div class="box1">
+        <div class="p1"></div>
+        <div class="p2"></div>
+        <div class="p3"></div>
+    </div>
+    <div class="box2">
+        <div class="q1"></div>
+        <div class="q2"></div>
+        <div class="q3"></div>
+    </div>
+    <div class="box3">
+        <div class="r1"></div>
+        <div class="r2"></div>
+        <div class="r3"></div>
     </div>
 </body>
 </html>
