--- a/task/after.html
+++ b/task/after.html
@@ -23,7 +23,7 @@
         width: 500px;
         background-color: rgba(255, 68, 0, 0.863);
         background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/330px-Flag_of_India.svg.png');
-        /* opacity: 0.34; */
+        opacity: 0.34;
         transition: 1s; 
     }
     .box::before {
@@ -34,7 +34,7 @@
         width: 500px;
         background-color: rgba(255, 68, 0, 0.863);
         background-image: url('https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/330px-Flag_of_India.svg.png');
-        /* opacity: 0.34; */
+        opacity: 0.34;
         transition: 1s; 
         right: 518px;
     }
