--- a/task/login.html
+++ b/task/login.html
@@ -7,7 +7,51 @@
     <title>Document</title>
 </head>
 <style>
+
     .main{
+        height: 300px;
+        width: 350px;
+        border: 1px solid rgba(0, 0, 0, 0.219);
+        margin: auto;
+        margin-top: 150px;
+        border-radius: 6px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    h1{
+        text-align: center;
+    }
+    .text{
+        height: 40px;
+        width: 270px;
+        margin-bottom: 7px;
+        border-radius: 6px;
+        border: 1px solid rgba(0, 0, 0, 0.116);
+        padding-left: 10px;
+        margin-left: 35px;
+        outline: none;
+    } 
+    .sub{
+        height: 50px;
+        width: 285px;
+        border-radius: 6px;
+        background-color: aqua;
+        border: none;
+        font-size: 22px;
+        margin-left: 35px;
+        margin-top: 20px;
+        color: white;
+        cursor: pointer;
+    }
+
+    .sub:hover{
+        background-color: black;
+    }
+
+
+    /* .main{
         height: 300px;
         width: 350px;
         border: 1px solid rgba(0, 0, 0, 0.219);
@@ -41,7 +85,7 @@
     }
     .sub:hover{
         background-color: black;
-    }
+    } */
 </style>
 <body>
     <div class="main">
