--- a/Animation3.html
+++ b/Animation3.html
@@ -24,8 +24,8 @@ body{
 
     animation-name: ani1;
     animation-duration: 5s;
-    /* animation-iteration-count: infinite;
-    animation-timing-function: linear; */
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 
 }
 
